tests/snapshots/file@string@unterminated.lox.snap
---
source: tests/common/mod.rs
description: "// [line 2] Error: Unterminated string.\n\"this string has no close quote"
input_file: crafting_interpreters_test_files/string/unterminated.lox
---
OUT: 

===
ERR: 
  × Static errors

Error:   × [line 2] Error: Unterminated string.
   ╭─[2:1]
 1 │ // [line 2] Error: Unterminated string.
 2 │ "this string has no close quote
   · ───────────────┬───────────────
   ·                ╰── here
   ╰────
